force-app/main/default/objects/Lead/fields/CapitalSocial__c.field-meta.xml
<CustomField>
    <fullName>CapitalSocial__c</fullName>
    <label>Capital Social</label>
    <length>255</length>
    <type>Text</type>
</CustomField>