force-app/main/default/objects/Lead/fields/Cep__c.field-meta.xml
<CustomField>
    <fullName>Cep__c</fullName>
    <description>Cep</description>
    <label>Cep</label>
    <length>255</length>
    <type>Text</type>
</CustomField>