force-app/main/default/objects/Lead/fields/CnaeFiscal__c.field-meta.xml
<CustomField>
    <fullName>CnaeFiscal__c</fullName>
    <description>Número do Cnae Fiscal</description>
    <label>Cnae Fiscal</label>
    <length>255</length>
    <type>Text</type>
</CustomField>