force-app/main/default/objects/Lead/fields/cnaefiscaldescricao__c.field-meta.xml
<CustomField>
    <fullName>cnaefiscaldescricao__c</fullName>
    <label>Descrição do Cnae Fiscal</label>
    <length>255</length>
    <type>Text</type>
</CustomField>