force-app/main/default/objects/Lead/fields/CnaesSecundarios__c.field-meta.xml
<CustomField>
    <fullName>CnaesSecundarios__c</fullName>
    <label>Cnaes Secundários</label>
    <length>255</length>
    <type>Text</type>
</CustomField>