force-app/main/default/objects/Lead/fields/Cnpj__c.field-meta.xml
<CustomField>
    <fullName>Cnpj__c</fullName>
    <description>Número do Cnpj da empresa</description>
    <inlineHelpText>Número do Cnpj da empresa</inlineHelpText>
    <label>Cnpj</label>
    <length>30</length>
    <type>Text</type>
</CustomField>