force-app/main/default/objects/Lead/fields/CodigoMunicipio__c.field-meta.xml
<CustomField>
    <fullName>CodigoMunicipio__c</fullName>
    <label>Código Município</label>
    <length>255</length>
    <type>Text</type>
</CustomField>