force-app/main/default/objects/Lead/fields/CodigoNaturezaJuridica__c.field-meta.xml
<CustomField>
    <fullName>CodigoNaturezaJuridica__c</fullName>
    <description>Código da Natureza Jurídica</description>
    <label>Código Natureza Jurídica</label>
    <length>10</length>
    <type>Text</type>
</CustomField>