force-app/main/default/objects/Lead/fields/Complemento__c.field-meta.xml
<CustomField>
    <fullName>Complemento__c</fullName>
    <description>Complemento</description>
    <label>Complemento</label>
    <length>255</length>
    <type>Text</type>
</CustomField>