force-app/main/default/objects/Lead/fields/DataExclusaoSimples__c.field-meta.xml
<CustomField>
    <fullName>DataExclusaoSimples__c</fullName>
    <label>Data Exclusão do Simples</label>
    <type>Date</type>
</CustomField>