force-app/main/default/objects/Lead/fields/DataInicioAtividade__c.field-meta.xml
<CustomField>
    <fullName>DataInicioAtividade__c</fullName>
    <label>Data Início Atividade</label>
    <type>Date</type>
</CustomField>