force-app/main/default/objects/Lead/fields/DataOpcaoPeloSimples__c.field-meta.xml
<CustomField>
    <fullName>DataOpcaoPeloSimples__c</fullName>
    <label>Data da Opção pelo Simples</label>
    <type>Date</type>
</CustomField>