force-app/main/default/objects/Lead/fields/DataSituacaoCadastral__c.field-meta.xml
<CustomField>
    <fullName>DataSituacaoCadastral__c</fullName>
    <description>Data da Situação Cadastral</description>
    <label>Data Situação Cadastral</label>
    <type>Date</type>
</CustomField>