force-app/main/default/objects/Lead/fields/DataSituacaoEspecial__c.field-meta.xml
<CustomField>
    <fullName>DataSituacaoEspecial__c</fullName>
    <label>Data da Situação Especial</label>
    <type>Date</type>
</CustomField>