force-app/main/default/objects/Lead/fields/DescricaoMatrizFilial__c.field-meta.xml
<CustomField>
    <fullName>DescricaoMatrizFilial__c</fullName>
    <description>DEscrição do tipo de filial</description>
    <label>Descricao Matriz Filial</label>
    <length>255</length>
    <type>Text</type>
</CustomField>