force-app/main/default/objects/Lead/fields/DescricaoPorte__c.field-meta.xml
<CustomField>
    <fullName>DescricaoPorte__c</fullName>
    <label>Descrição Porte</label>
    <length>255</length>
    <type>Text</type>
</CustomField>