force-app/main/default/objects/Lead/fields/DescricaoSituacaoCadastral__c.field-meta.xml
<CustomField>
    <fullName>DescricaoSituacaoCadastral__c</fullName>
    <description>Descrição do código da Situação Cadastral da Empresa</description>
    <label>Descrição Situação Cadastral</label>
    <length>255</length>
    <type>Text</type>
</CustomField>