force-app/main/default/objects/Lead/fields/IdentificadorMatrizFilial__c.field-meta.xml
<CustomField>
    <fullName>IdentificadorMatrizFilial__c</fullName>
    <description>Identificador Matriz Filial</description>
    <inlineHelpText>Identificador Matriz Filial</inlineHelpText>
    <label>Identificador Matriz Filial</label>
    <length>255</length>
    <type>Text</type>
</CustomField>