force-app/main/default/objects/Lead/fields/MotivoSituacaoCadastral__c.field-meta.xml
<CustomField>
    <fullName>MotivoSituacaoCadastral__c</fullName>
    <description>Motivo da Situação Cadastral da Empresa</description>
    <label>Motivo Situação Cadastral</label>
    <length>255</length>
    <type>Text</type>
</CustomField>