force-app/main/default/objects/Lead/fields/NomeCidadeExterior__c.field-meta.xml
<CustomField>
    <fullName>NomeCidadeExterior__c</fullName>
    <label>Nome Cidade Exterior</label>
    <length>255</length>
    <type>Text</type>
</CustomField>