force-app/main/default/objects/Lead/fields/Numero__c.field-meta.xml
<CustomField>
    <fullName>Numero__c</fullName>
    <label>Número</label>
    <length>255</length>
    <type>Text</type>
</CustomField>