force-app/main/default/objects/Lead/fields/opcaoMei__c.field-meta.xml
<CustomField>
    <fullName>opcaoMei__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Opção pelo Mei</label>
    <type>Checkbox</type>
</CustomField>