force-app/main/default/objects/Lead/fields/OpcaoSimples__c.field-meta.xml
<CustomField>
    <fullName>OpcaoSimples__c</fullName>
    <label>Opção pelo Simples</label>
    <length>255</length>
    <type>Text</type>
</CustomField>