force-app/main/default/objects/Lead/fields/Porte__c.field-meta.xml
<CustomField>
    <fullName>Porte__c</fullName>
    <label>Porte</label>
    <length>255</length>
    <type>Text</type>
</CustomField>