force-app/main/default/objects/Lead/fields/QualificacaoResponsavel__c.field-meta.xml
<CustomField>
    <fullName>QualificacaoResponsavel__c</fullName>
    <label>Qualificação do Responsável</label>
    <length>255</length>
    <type>Text</type>
</CustomField>