force-app/main/default/objects/Lead/fields/SituacaoCadastral__c.field-meta.xml
<CustomField>
    <fullName>SituacaoCadastral__c</fullName>
    <description>Situação Cadastral da empresa</description>
    <label>Situação Cadastral</label>
    <length>255</length>
    <type>Text</type>
</CustomField>