force-app/main/default/objects/Lead/fields/SituacaoEspecial__c.field-meta.xml
<CustomField>
    <fullName>SituacaoEspecial__c</fullName>
    <label>Situação Especial</label>
    <length>255</length>
    <type>Text</type>
</CustomField>