force-app/main/default/objects/Lead/fields/TelefoneComercial__c.field-meta.xml
<CustomField>
    <fullName>TelefoneComercial__c</fullName>
    <label>Telefone Comercial</label>
    <length>255</length>
    <type>Text</type>
</CustomField>