force-app/main/default/objects/Lead/fields/TipoLogradouro__c.field-meta.xml
<CustomField>
    <fullName>TipoLogradouro__c</fullName>
    <label>Tipo de Logradouro</label>
    <length>255</length>
    <type>Text</type>
</CustomField>